--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/schema": "^10.0.2",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1"
