--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.10.0",
     "@graphql-tools/load-files": "^7.0.0",
     "@graphql-tools/schema": "^10.0.2",
-    "express": "^4.18.2",
-    "graphql": "^16.8.1",
-    "graphql-yoga": "^5.1.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
